--- a/TicketShop/Views/Shared/_Layout.cshtml
+++ b/TicketShop/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-warning border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-warning box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand font-weight-bold text-uppercase" asp-area="" asp-controller="Home" asp-action="Index">Ticket Shop</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
