--- a/TicketShop/Views/Home/Index.cshtml
+++ b/TicketShop/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 <div class="row">
     @foreach (var movieModel in Model.Movies)
     {
-    <div class="col card" style="width: 20rem; padding-top: 1rem;">
+    <div class="col card" style="min-width: 20rem; max-width: 20rem; padding-top: 1rem;">
         <img class="card-img-top" src="@movieModel.MovieImageUrl" alt="Movie Poster" />
         <div class="card-body">
             <h2>@movieModel.MovieTitle</h2>
